2003-06-21  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c: gnuplot_x11<->x11.trm font info exchange is now
	working.

2003-06-20  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c:
	It turns out that yesterday's patch breaks the "pause -1" command
	(it always returns immediately).  I have temporarily disabled the
	new code while I track down the problem.  The offending line is now
	protected by #ifdef X11_FONT_UPDATE.

	* term/x11.trm:
	Add an interlock so that the gnuplot_x11<->x11.trm font info exchange
	is only performed once per splot, rather than every time the view is
	changed using the mouse.

2003-06-19  Ethan Merritt <merritt@u.washington.edu>

	* src/gplt_x11.c src/graphics.c src/mouse.c src/mousecmn.h term/x11.trm
	Use existing mouse communication pipe to send X11 font characteristics 
	back from gnuplot_x11 to x11.trm. This allows gnuplot to lay out the 
	plot with v_char and h_char sizes that are correct for the current 
	default X11 font. This patch slightly changes the timing of initial
	operations over the pipe, and adds a FFLUSH(), so there is a remote 
	possibility that it also fixes a reported problem in which gnuplot_x11
	eats CPU cycles while supposedly idle. This patch should have no effect
	if gnuplot is configured with --disable-mouse.

	* term/pslatex.trm: Escape % to %% inside printf() statement.

2003-06-18  Ethan Merritt <merritt@u.washington.edu>

	* term/gd.h: Fix FPRINTF typo.

2003-06-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* command.c do_string_replot(): Dynamically allocate temporary input
	line buffer instead of using a fix-size one. Fixes crash when replotting
	a long plot command by mouse/hotkey.

2003-06-15  Ethan Merritt <merritt@u.washington.edu>

	* src/graphics.c: Center key title over entire key box rather than
	cramming it into the first column only.

2003-06-14  Ethan Merritt <merritt@u.washington.edu>

	* term/epslatex.trm: Clean up file name handling; now it is OK to give