@@ -1,5 +1,5 @@
 /*
- * $Id: x11.trm,v 1.72 2003/06/20 17:24:40 sfeam Exp $
+ * $Id: x11.trm,v 1.73 2003/06/20 19:25:30 sfeam Exp $
  *
  */
 
@@ -1171,7 +1171,7 @@ TERM_TABLE_START(x11_driver)
     X11_text, null_scale, X11_graphics, X11_move, X11_vector,
     X11_linetype, X11_put_text, X11_text_angle,
     X11_justify_text, X11_point, do_arrow, X11_set_font,
-    X11_pointsize, TERM_CAN_MULTIPLOT,
+    X11_pointsize, TERM_CAN_MULTIPLOT|TERM_INIT_ON_REPLOT,
     X11_text /* suspend can use same routine */ , 0 /* resume */ ,
     X11_fillbox, X11_linewidth
 #ifdef USE_MOUSE
